test/ui/test/lowering/intrinsic-declaration-with-explicit-body.stderr
error[E042]: the declaration ‘Void’ marked as ‘intrinsic’ has a body
  ┌─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:3:1
  │
3 │ @intrinsic
  │ ────────── marks the declaration as being defined outside of the language
  │
  ├─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:4:17
  │
4 │ data Void: Type of
  │                 ══ the body specifying that the data type has no constructors and is therefore uninhabited
  │                             conflicting with the attribute
  │
 help: remove either the body or the attribute

error[E042]: the declaration ‘Unit’ marked as ‘intrinsic’ has a body
  ┌─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:6:1
  │
6 │ @intrinsic
  │ ────────── marks the declaration as being defined outside of the language
  │
  ├─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:7:17
  │
7 │ data Unit: Type of { unit: Unit }
  │                 ═══════════════ the body containing a set of constructors
  │                                          conflicting with the attribute
  │
 help: remove either the body or the attribute

error[E042]: the declaration ‘Bool’ marked as ‘intrinsic’ has a body
   ┌─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:11:1
   │
11 │ @intrinsic
   │ ────────── marks the declaration as being defined outside of the language
   │
   ├─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:12:17
   │
12 │   data Bool: Type of
   · ╔═════════════════╝
14 │ ║     true: Bool
   │ ╚══════════════╝ the body containing a set of constructors
   │                           conflicting with the attribute
   │
  help: remove either the body or the attribute

error[E042]: the declaration ‘thing’ marked as ‘intrinsic’ has a body
   ┌─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:16:1
   │
16 │ @intrinsic thing = 0
   │ ────────── marks the declaration as being defined outside of the language
   │
   ├─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:16:18
   │
16 │ @intrinsic thing = 0
   │                  ═══ the body conflicting with the attribute
   │
  help: remove either the body or the attribute

error[E015]: the declaration ‘thing’ does not have a type annotation
   ┌─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:16:17
   │
16 │ @intrinsic thing = 0
   │                ⟫⟪ missing mandatory type annotation
   │
  help: annotate the declaration with a type
   │
16 │ @intrinsic thing: Type = 0
   │                 ~~~~~~

error: aborting due to 5 previous errors

